--- a/LAB3/signup.html
+++ b/LAB3/signup.html
@@ -7,7 +7,7 @@
     </head>
     <body>
         <h1>Welcome to INTERNET-PROGRAMMING SHOP</h1>
-        <h2><a class="loginbutton" href = "login.html">로그인</a> <span class = "selected"> 회원가입</span></h2>
+        <h2><a class="notselected" href = "login.html">로그인</a> <span class = "selected"> 회원가입</span></h2>
         <hr class="line">
         <br>
         <p>개인정보 (필수) </p>
