--- a/LAB3/index.html
+++ b/LAB3/index.html
@@ -7,7 +7,7 @@
     </head>
 
     <body>
-        <h1 class="move">INTERNET-PROGRAMMING SHOP</h1>
+        <h1><span class="move">INTERNET-PROGRAMMING SHOP</span></h1>
         <br>
         <h2><span class = "selected">메인화면</span> <a class="notselected" href = "login.html">로그인</a> <span> </span><a class="notselected" href = "signup.html"> 회원가입</a></span></h2>
         <hr>
